confs/onlyoffice/office_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: docservice
    labels:
        app: docservice
spec:
    ports:
        - port: 80
    selector:
        app: docservice
